--- a/..github/workflows/main.yml
+++ b/..github/workflows/main.yml
@@ -15,7 +15,7 @@ jobs:
       - uses: actions/checkout@v3
       - uses: Platane/snk/svg-only@v3
         with:
-          github_user_name: generate github-contribution-grid-snake.svg # <-- put YOUR GitHub username here
+          github_user_name: somyayq # <-- put YOUR GitHub username here
           outputs: dist/snake.svg
 
       - name: Push Snake to Output Branch
